fix align

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -440,10 +440,27 @@
       color: $dm-brand-color-dark;
       text-decoration: none;
     }
+    span {
+      color: #aaa;
+      cursor: not-allowed;
+    }
+
+    &.no-previous span,
+    &.no-next span {
+      color: gray;
+    }
+
+    * {
+      text-align: center;
+    }
+
     list-style-type: none;
     padding: 3px;
   }
 
   display: flex;
   justify-content: center;
+  gap: 1rem;
+  padding: 0;
+  margin: 0;
 }
